# Classificador-de-Reclamacoes

./: README.md  pyproject.toml
data/: Alimentos.json  Educação.json  Habitação.json  Loterias,_Apostas_e_Promoções_Comerciais.json  Produtos_Eletrodomésticos_e_Eletrônicos.json  Produtos_de_Telefonia_e_Informática.json  Saúde.json  Serviços_Financeiros.json  Telecomunicações.json  Transportes.json  TurismoViagens.json  Água,_Energia,_Gás.json
src/: main.py
src/builder/: builder_knn_tf_idf.py  builder_knn_transformers.py  builder_naive.py
