[project]
name = "classificador-de-reclamacoes"
version = "0.1.0"
description = "Classificador de reclamações de usuários"
authors = [
    {name = "Lucas Mota",email = "lucasmota@escavador.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "sentence-transformers (>=5.5.1,<6.0.0)",
    "nltk (>=3.9.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
